--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ jar {
     manifest {
         attributes 'Implementation-Title': projectName,
                    'Implementation-Version': version,
-                   'Automatic-Module-Name': 'st.extreme.pingpong',
+                   'Automatic-Module-Name': 'st.extreme.klingklong',
                    'Built-By': 'Otmar Humbel <ohumbel@gmail.com>',
                    'Built-Date': new Date(),
                    'Built-JDK': System.getProperty('java.version'),
