prefix properties with the package, to avoid clashes with the world

--- a/src/main/resources/klingklong.properties
+++ b/src/main/resources/klingklong.properties
@@ -5,4 +5,4 @@
 # FROZEN: no honking (output) at all
 # COSY: informational output
 # HOT: every possible output
-klingklong.horn.temperature=COSY
+st.extreme.klingklong.horn.temperature=COSY
